# voxelcraft

./: .gitignore  CMakeLists.txt  README.md
android/: settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/voxelcraft/: GameActivity.kt  MainActivity.kt  MenuActivity.kt
android/app/src/main/res/animator/: button_raise.xml
android/app/src/main/res/drawable/: bg_button_primary.xml  bg_button_secondary.xml  bg_dialog_card.xml  bg_menu_gradient.xml
android/app/src/main/res/layout/: dialog_about.xml  dialog_settings.xml
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
scripts/: compile_shaders.py
src/: main.cpp
src/engine/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VulkanContext.cpp  VulkanContext.h  VulkanTexture.cpp  VulkanTexture.h
src/game/: Camera.h  DayNightCycle.h  Game.cpp  Game.h  InputManager.cpp  InputManager.h  Inventory.h  Player.cpp  Player.h  SaveManager.cpp  SaveManager.h
src/math/: Math.h
src/noise/: SimplexNoise.cpp  SimplexNoise.h
src/shaders/: block.frag  block.frag.h  block.vert  block.vert.h  sky.frag  sky.frag.h  sky.vert  sky.vert.h  ui.frag  ui.frag.h  ui.vert  ui.vert.h
src/world/: BlockType.h  Chunk.h  ChunkMesh.cpp  ChunkMesh.h  TerrainGenerator.cpp  TerrainGenerator.h  World.cpp  World.h
